--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <!-- FORM -->
 <div class="control-panel">
-  <h2>Kaizen Entry Form (GitHub Hosted)</h2>
+  <h2>Kaizen Entry Form </h2>
   
   <div class="form-row">
       <div class="form-group"><label>Topic</label><input type="text" id="topic" placeholder="e.g. Prevention of leakage..."></div>
@@ -277,3 +277,4 @@ function saveToGoogleSheet() {
 
 </body>
 </html>
+
