--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Kaizen Manager</title>
+  <title>Improvments Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- HTML2PDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -71,7 +71,7 @@
   </div>
 
   <h2>
-    <span>Kaizen Entry Form</span>
+    <span>Improvemnts Tracker</span>
     <button class="btn btn-sec" onclick="loadData()">🔄 Refresh Data</button>
   </h2>
   
@@ -417,4 +417,5 @@ loadData();
 
 </body>
 </html>
+
 
