--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 </div>
 
 <script>
+// !!! UPDATE SCRIPT URL !!!
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzcXvGx_kCBEawCt1S86xsxa64cOMBSQfqwTYqKHVv8iqy9N4X2rpn78z7oU4eo8fzF-w/exec"; 
 
 let imgData = { asWas: null, asIs: null, asWasName: "", asIsName: "" };
